修复 一些markdownlint的冲突

--- a/概率论与数理统计/概率论与数理统计/概率论.md
+++ b/概率论与数理统计/概率论与数理统计/概率论.md
@@ -1,7 +1,13 @@
 # 概率论与数理统计
 
- 这里主要是概率论相关的知识
-[TOC]
+这里主要是概率论相关的知识，公式由$\KaTeX$写成
+
+- 常见分布
+  - [常见一维离散分布](#3-2-常见的一维离散型分布)
+  - 连续型
+    - [均匀分布](#均匀分布uniform-distribution)
+    - [指数分布](#4-4-指数分布)
+    - [正态分布](#4-5-正态分布)
 
 ## 前言
 
@@ -10,19 +16,17 @@
 ### 历史与发展
 
 - 文艺复兴后随着航海事业的发展，意大利开始出现海上保险业务
-
 - 保险行业的发展，随机博弈的发展
-
 - 人们通过对随机博弈现象的分析注意到了它的一些特性
 
-  **德·梅耳问题**将一枚骰子掷4次至少出现一个6点的机会比较多而同时将两枚骰子掷24次，至少出现一次双6点的机会却很少$P_1=1-\frac{5}{6}^4=\frac{671}{1296}$
+**德·梅耳问题**将一枚骰子掷4次至少出现一个6点的机会比较多而同时将两枚骰子掷24次，至少出现一次双6点的机会却很少$P_1=1-\frac{5}{6}^4=\frac{671}{1296}$
 
-  **分赌注问题**甲乙两人决定赌若干局，事先约定谁先赢6局便为赢家，赢家将独自赢得全部奖金。现在两人一共进行了7局比赛，甲赢了3局，乙赢了4局由于某种原因比赛无法继续，此时该如何分配奖金？
+**分赌注问题**甲乙两人决定赌若干局，事先约定谁先赢6局便为赢家，赢家将独自赢得全部奖金。现在两人一共进行了7局比赛，甲赢了3局，乙赢了4局由于某种原因比赛无法继续，此时该如何分配奖金？
 
 **组合概率时期** 计算各种古典概率
 1951年德梅耳偶遇了法国***帕斯卡***（Pascal,1623-1662)，就此问题向帕斯卡请教，帕斯卡将此问题与它的好友业余数学家***费尔马***(Fermat,1601-1665)共同探讨，于1654年解决了此问题，并进行了一段话的推广。与此同时荷兰***惠根斯***听说这个问题后也很感兴趣于是潜心研究于1657年发表了*《论掷骰子游戏中的计算》*（概率论最早的著作）
 
-**雅各布家族** *雅各布·伯努利(Jacob Bernoulli,1654-1705)*给出了gutushuguangwenti的详尽解法并证明了大数定律的一个定理，1713年（时已逝）出版《猜度术》。侄子尼古拉·伯努利（Nicolaus Bernoulli,1687-1759)提出了著名的圣彼得堡问题（1738）
+**雅各布家族** *雅各布·伯努利(Jacob Bernoulli,1654-1705)*给出了赌徒输光问题的详尽解法并证明了大数定律的一个定理，1713年（时已逝）出版《猜度术》。侄子尼古拉·伯努利（Nicolaus Bernoulli,1687-1759)提出了著名的圣彼得堡问题（1738）
 法国数学家拉普拉斯（Laplace,1749-1827)明确给出了概率的古典定义，并在概率论中引入了更有利的数学分析公式，讲概率论推向一个新的发展阶段，建立了De Mover-Lapalce定理，建立了观测误差理论和最小二乘法，1812年出版*《分析的概率理论》*
 
 **苏俄数学家**1906年俄国数学家马尔科夫(Markov,1856-1922)年提出马尔科夫链
@@ -48,6 +52,7 @@
 > 一定条件下必然要发生的现象成为**确定性现象或必然现象**
 
 **随机现象**是一定条件下可能出现也可能不出现的现象
+
 **随机试验**指在一次试验中无法确定其具体结果，但在实验之前可预知其全部可能结果的试验。常用大写字母E表示。
 随机试验(random trial，简称试验trial)有三大特点：
 
@@ -55,43 +60,36 @@
 2. **随机性**：每次试验将要出现的结果是不确定的，事先无法准确预知；
 3. **明确性**：所有的试验结果是可观察的，可事先预知所有可能试验结果。
 
-书上为重复性、多样性和随机性
+> 书上为重复性、多样性和随机性
 
 #### 样本空间
 
-随机试验的所有可能结果构成的全体称为**样本空间**，常用$\Omega$、S等符号表示。
-随机试验的每一个可能的结果称为一个**样本点**，常用$\omega$、*e*等符号表示。
+- 随机试验的所有可能结果构成的全体称为**样本空间**，常用$\Omega$、S等符号表示。
+- 随机试验的每一个可能的结果称为一个**样本点**，常用$\omega$、*e*等符号表示。
 
 样本空间是由样本点构成的全集。样本空间中的元素，即随机试验的每个基本结果称为样本点
 
 #### 随机事件
 
 1. 由部分试验结果组成的集合称为**随机事件**，简称为**事件**。常用大写英文字母A、B、C等表示
-     随机事件就是样本空间的子集。$ 事件A发生\Longleftrightarrow \omega \in A$。
-2. 几个特殊事件：
-    1.**必然事件**：样本空间Ω包含所有试验结果，它每次试验中都会发生；
-    2.**不可能事件**：空集∅不包含任何结果，它在每次试验中都不会发生；
-    3.**基本事件**：由一种可能结果，即单个样本点构成的事件
+    - 随机事件就是样本空间的子集。$\text{事件A发生}\Rightarrow \omega \in A$
+2. 几个特殊事件
+    1. **必然事件**：样本空间Ω包含所有试验结果，它每次试验中都会发生；
+    2. **不可能事件**：空集∅不包含任何结果，它在每次试验中都不会发生；
+    3. **基本事件**：由一种可能结果，即单个样本点构成的事件
 
 #### 事件的运算关系
 
-1. 事件的包含$A\subset B  \ or\  B\supset A$
-2. 事件相等$A=B \ \ A \subset B \ A\supset B$
-3. 事件的并（和）$A\cup B$
-4. 事件的交（积）$A\cap B=AB$
-5. 事件的差($A-B$)
-6. 互不相容事件$A\cap B=\emptyset$
-7. 对立事件$\bar{A}$
-8. 完备事件组[^完备事件组]
-
-|随机事件A、B、C|记为|
-|:---|----|
-|至少发生一个|$A\cup B\cup C$|
-|都发生|$A\cap B \cap C=ABC$|
-|恰好发生一个|$(A\bar{B} \bar{C})\cup(\bar{A} B\bar{C})\cup(\bar{A}\bar{B}C)$|
-|至多发生两个（至少一个不发生）|$\bar{A}\cup\bar{B}\cup\bar{C}$|
-|至少两个事件发生|$AB\cup BC \cup AC$|
-|A发生且B、C至少有一个不发生|$A(\bar{B}\cup\bar{C})$|
+| 运算关系       | 符号表示                           |
+| -------------- | ---------------------------------- |
+| 事件的包含     | $A\subset B  \ or\  B\supset A$    |
+| 事件相等       | $A=B \ \ A \subset B \ A\supset B$ |
+| 事件的并（和） | $A\cup B$                          |
+| 事件的交（积） | $A\cap B=AB$                       |
+| 事件的差       | $A-B$                              |  |
+| 互不相容事件   | $A\cap B=\emptyset$                |
+| 对立事件       | $\bar{A}$                          |
+| 完备事件组     | 如下                               |
 
 完备事件组:设S为试验E的样本空间，B1，B2，…，Bn为E的一组事件。若
 
@@ -99,6 +97,15 @@
 2. B1∪B2∪…∪Bn=S，
 
 则称B1，B2，…，Bn为样本空间S的一个完备事件组（划分）。定义在2-1有说明。定义为充要条件，反之也成立
+
+| 随机事件A、B、C                | 记为                                                            |
+| :----------------------------- | --------------------------------------------------------------- |
+| 至少发生一个                   | $A\cup B\cup C$                                                 |
+| 都发生                         | $A\cap B \cap C=ABC$                                            |
+| 恰好发生一个                   | $(A\bar{B} \bar{C})\cup(\bar{A} B\bar{C})\cup(\bar{A}\bar{B}C)$ |
+| 至多发生两个（至少一个不发生） | $\bar{A}\cup\bar{B}\cup\bar{C}$                                 |
+| 至少两个事件发生               | $AB\cup BC \cup AC$                                             |
+| A发生且B、C至少有一个不发生    | $A(\bar{B}\cup\bar{C})$                                         |
 
 #### 事件的运算律
 
@@ -136,7 +143,7 @@ $$
 
 #### 事件的概率
 
-##### 定义1
+##### 定义1(频率趋近概率)
 
 在相同的条件下进行大量的重复试验，随机事件A出现的频率$\frac{n_A}{n}$将稳定地在某个固定的数值p的附近摆动，称这个稳定值p为随机事件A的**概率**，记为P(A)，即P(A)=p
 $$
@@ -160,22 +167,25 @@ $$
 $$
 P:A\to P(A),\forall A\subset \Omega ,\lim_{n\to \infty}f_n(A)=P(A)
 $$
-![示例图片](https://note.youdao.com/favicon.ico)以上内容在有道云笔记上写成
+
+以上内容在有道云笔记上写成![示例图片](https://note.youdao.com/favicon.ico)
 
 ### 1-3 概率的性质
 
-1. (**空集的概率为零**)$P(\emptyset)=0$.
-2. (**有限可加性**）若$A_1,A_2,\cdots,A_n$为n个两两互不相容的事件，则$P(A_1\cup A_2\cup \cdots\cup A_n)=P(A_1)+P(A_2)+\cdots +P(A_n)$
-3. （**单调不减性**）设A，B为两个事件，且$A\subset B$,则$P(A)\leq P(B)$，$P(B-A)=P(B)-P(A)$（**减法公式**）
+1. （**空集的概率为零**）$P(\emptyset)=0$.
+2. （**有限可加性**）若$A_1,A_2,\cdots,A_n$为n个两两互不相容的事件，则$P(A_1\cup A_2\cup \cdots\cup A_n)=P(A_1)+P(A_2)+\cdots +P(A_n)$
+3. （**单调不减性**）设A，B为两个事件，且$A\subset B$,则$P(A)\leq P(B)$，$P(B-A)=P(B)-P(A)$（*减法公式*）
 4. 对任一事件A，有$P(A)\leq 1$.
 5. （**互补性**）对任一事件A，有$P(\bar{A})=1-P(A)$
-6. (**加法公式**)对于任意两个事件A、B，有$P(A\cup B)=P(A)+P(B)-P(AB)$
+6. （**加法公式**）对于任意两个事件A、B，有$P(A\cup B)=P(A)+P(B)-P(AB)$
 
 加法公式的**推广**：$P(A\cup B\cup C)=P(A)+P(B)+P(C)-P(AB)-P(AC)-P(BC)+P(ABC)$
 
-性质3 的使用示例：$P(AB)\leq P(A)=0,\Longrightarrow P(AB)=0$
+性质3 的使用示例：$P(AB)\leq P(A)=0\ \Longrightarrow P(AB)=0$
 
 ### 1-4 古典概型
+
+古典概率模型(classical probability model),简称古典概型，又称等可能概率模型
 
 #### 古典概型（等可能概型）的定义
 
@@ -183,11 +193,13 @@ $$
 2. 试验中的每个基本事件发生的概率相同 **等可能性**
 
 设试验E为古典概型，不妨设其样本空间为$\Omega=\{e_1,e_2,\cdots,e_n\}$，由（2）有$P({e_1})=P({e_2})=\cdots =P({e_n})=nP({e_i})$，由$P(\Omega)=1$,得$P({e_i})=\frac{1}{n},i=1,2,\cdots ,n$
-若事件A包含k个基本事件，即$A={e_{1_1,}e_{i_2},\cdots,e_{i_k}}$,于是[^141]
+若事件A包含k个基本事件，即$A={e_{1_1,}e_{i_2},\cdots,e_{i_k}}$,于是
+
 $$
 P(A)=\sum_{j=1}{k}{P(e_{i_j})}=\frac{k}{n}=\frac{A包含的基本事件数}{\Omega中基本事件总数}
 $$
-[^141]: 古典概型中**事件概率的计算公式**也称为**概率的古典定义**。古典概率模型(classical probability model),简称古典概型，又称等可能概率模型、
+
+古典概型中**事件概率的计算公式**也称为**概率的古典定义**。
 
 #### 排列组合的知识复习
 
@@ -200,11 +212,11 @@ P_n^m=A_n^m=n(n-1)\cdots[n-(m-1)]=\frac{n!}{(n-m)!}\\
 C_n^m=\frac{A_n^m}{A_m^m}=\frac{n(n-1)\cdots[n-(m-1)]}{m(m-1)\cdots1}=\frac{n!}{(n-m)!m!}
 $$
 
-- **不放回**取样$P_n^m$
-- **放回**取样$n^m$
-- **一把抓**$C_n^m$
+- **不放回**取样$P_n^m$:排列，考虑取球的先后顺序
+- **放回**取样$n^m$：每一次抓球独立
+- **一把抓**$C_n^m$：一次抓球，不考虑顺序
 
->既能被a整除也能被b整除就是说能被a和b的最小公倍数整除
+> 既能被a整除也能被b整除就是说能被a和b的最小公倍数整除
 
 相关问题
 
@@ -234,8 +246,6 @@ $$
 
 抓阄原理：注意前面一个人抓阄之后不能告诉后面的人,那么每个人抓到特定对对象阄的概率相等
 
-[^与概率的性质类似]:与概率形式类似
-
 ## 二、全概率公式和贝叶斯公式
 
 1. 掌握并会利用全概率公式和贝叶斯公式求解相关问题；
@@ -260,15 +270,20 @@ $$
 
 设随机试验E的样本空间为$\Omega$，A为E的事件，$B_1,B_2,\cdots,B_n$是$\Omega$的一个划分，且$P(B_i)>0(i=1,2,\dots,n),P(A)>0$,则
 $$
-P(B_i|A)=\frac{P(B_i)P(A|B_i)}{\sum\limits_{j=1}^{n}P(B_j)P(A|B_j)},i=1,2,\dots,n(2)
+P(B_i|A)
+=\frac{P( AB_i )}{P(A)}
+=\frac{P(B_i)P(A|B_i)}{\sum\limits_{j=1}^{n}P(B_j)P(A|B_j)},i=1,2,\dots,n(2)
 $$
-上式为贝叶斯公式,由全概率公式可知分母为P(A)，由条件概率公式可知分子为$P(AB_i)$
+上式为贝叶斯公式,由全概率公式可知分母为$P(A)$，由条件概率公式可知分子为$P(AB_i)$
 
 ### 2-3 独立性
 
 定义1：当P(B)>0时，若事件B的发生对事件A发生的概率没有影响，即`P(A|B)=P(A)`，则称**事件A对事件B独立**.
 
-定义2：当P(B)>0时，若P(A|B)=P(A)，则称A与B**相互独立**，简称**A、B独立**<br>当P(A)>0时，若P(B|A)=P(B)，则称A与B**相互独立**，简称**A、B独立**
+定义2：
+
+- 当P(B)>0时，若P(A|B)=P(A)，则称A与B**相互独立**，简称**A、B独立**
+- 当P(A)>0时，若P(B|A)=P(B)，则称A与B**相互独立**，简称**A、B独立**
 
 定义3：若事件A、B满足`P(AB)=P(A)P(B)`，则称A与B**相互独立**，简称A与B独立
 下列4个结论等价：
@@ -313,7 +328,7 @@ $$
 
 **定义**：设随机变量E的样本空间是$\Omega$，若对每个$\omega\in \Omega$，有定义在$\Omega$上的一个实数$X(\omega)$与之对应，称这样一个定义在$\Omega$上的单值实函数$X=X(\omega)$为**随机变量**，简记为$r,v,X$.随机变量一般用大写英文字母$X,Y,Z$等或希腊字母$\xi,\eta,\zeta$等表示.*随机变量定义域为$\Omega$值域为R。*
 
-**定义**：所有可能取值为有限个或可列无限个的随机变量称为**离散型随机变量**.<br>若X为离散型随机变量，不妨设其取值为$x_1,x_2,\cdots,x_n,\cdots,$令$P\{\omega|X(\omega)=x_k\}\overset{简记}{=}P\{X=x_k\}\overset{\Delta}{=}p_k,k=1,2,\cdots,$称$p_k=P\{X=x_k\},k=1,2,\cdots$为离散型r.v.X的**分布律**或**分布列**或**概率分布**
+**定义**：所有可能取值为有限个或可列无限个的随机变量称为**离散型随机变量**.若X为离散型随机变量，不妨设其取值为$x_1,x_2,\cdots,x_n,\cdots,$令$P\{\omega|X(\omega)=x_k\}\overset{简记}{=}P\{X=x_k\}\overset{\Delta}{=}p_k,k=1,2,\cdots,$称$p_k=P\{X=x_k\},k=1,2,\cdots$为离散型r.v.X的**分布律**或**分布列**或**概率分布**
 
 分布律的**性质**：
 
@@ -333,7 +348,8 @@ $$
 ### 3-2 常见的一维离散型分布
 
 只有两个可能结果的试验称为**贝努利试验**（成功失败试验、二次试验）
-吧贝努利试验重复独立地进行n次，所得的试验称为**n重贝努利试验**。即n重贝努利试验由n次基本试验构成，具有以下特点：
+
+把贝努利试验重复独立地进行n次，所得的试验称为**n重贝努利试验**。即n重贝努利试验由n次基本试验构成，具有以下特点：
 
 1. 每次基本试验有且只有两个可能结果：A发生或A不发生；
 2. 每次基本试验中每个结果出现的概率不变；
@@ -344,9 +360,20 @@ $$
 
 - 单点分布（One-point Distribution)
 - 两点分布（Two-point Distribution)（0-1分布）（贝努利分布）
-- **二项分布**（Binomial Distribution)<br>$X \sim B(n,p)$——$P\{X=k\}=C_n^kp^k(1-p)^{n-k},k=0,1,2,\cdots,n$[^321]<br>表示n次实验中**第k次**发生的概率
-- **几何分布**（Geometric Distribution）<br>$X\sim G(n,p)$——$P\{X=k\}=(1-p)^{k-1}p,k=1,2,\cdots,0<p<1$<br>在贝努利试验中，事件A在每次试验中发生的概率均为p（0<p<1)，以X表示A**首次**发生时**需要的试验次数**，那么X的分布律为
-- **泊松分布**（Poisson Distribution)[^322]<br>$X\sim P(\lambda)$——$P\{X=k\}=\frac{\lambda^k}{k!}e^{-\lambda},k=0,1,2,\dots$<br>若r.v.X的所有取值为一切非负整数，且其分布律为上式，其中$\lambda>0$为常数，泊松分布在排队论和随机系统中非常有用
+- **二项分布**（Binomial Distribution)
+  - $X \sim B(n,p)$
+  - $P\{X=k\}=C_n^kp^k(1-p)^{n-k},k=0,1,2,\cdots,n$
+  - 表示n次实验中事件A发生k次的概率
+  - 二项分布的最可能发生次数$m=\begin{cases} (n+1)p和(n+1)p-1 & (n+1)p整数\\ [(n+1)p] 取整& (n+1)p不是整数\end{cases}$
+- **几何分布**（Geometric Distribution）
+  - $X\sim G(n,p)$
+  - $P\{X=k\}=(1-p)^{k-1}p,k=1,2,\cdots,0<p<1$
+  - 在贝努利试验中，事件A在每次试验中发生的概率均为p（0<p<1)，以X表示A**首次**发生时**需要的试验次数**
+- **泊松分布**（Poisson Distribution)
+  - $X\sim P(\lambda)$
+  - $P\{X=k\}=\frac{\lambda^k}{k!}e^{-\lambda},k=0,1,2,\dots$
+  - 若r.v.X的所有取值为一切非负整数，且其分布律为上式，其中$\lambda>0$为常数，泊松分布在排队论和随机系统中非常有用
+  - 泊松分布的最可能发生次数$m=\begin{cases} \lambda和(\lambda-1) & \lambda整数\\ [\lambda] 取整&\lambda不是整数\end{cases}$
 
 **泊松定理**：泊松分布是二项分布中$np\to\lambda(n\to+\infty)$的情况
 
@@ -354,10 +381,6 @@ $$
 $$
 \lim_{n\to\infty}C_n^kp_n^k(1-p_n)^{n-k}=\frac{\lambda^k}{k!}e^{-\lambda},k=0,1,2,\dots
 $$
-
-[^321]:二项分布的最可能发生次数$m=\begin{cases} (n+1)p和(n+1)p-1 & (n+1)p整数\\ [(n+1)p] 取整& (n+1)p不是整数\end{cases}$
-
-[^322]:泊松分布的最可能发生次数$m=\begin{cases} \lambda和(\lambda-1) & \lambda整数\\ [\lambda] 取整&\lambda不是整数\end{cases}$
 
 ### 3-3 二维离散型随机变量及其分布
 
@@ -407,8 +430,13 @@ $$
 分布函数的**性质**：（**充分必要性质**[^411]）
 
 1. 单调不减性：若$x_1<x_2,$则$(x_1)\leq F(x_2)$
-2. 非负规范性：对任意实数x，有$0\leq F(x\leq 1;$ $ F(-\infty)=\lim\limits_{x\to-\infty }F(x)=0,F(+\infty)=\lim\limits_{x\to+\infty}F(x)=1$
+2. 非负规范性：对任意实数x，有
+   1. $0\leq F(x)\leq 1$
+   2. $F(-\infty)=\lim\limits_{x\to-\infty}F(x)=0$
+   3. $F(+\infty)=\lim\limits_{x\to+\infty}F(x)=1$
 3. 右连续性：对任意实数$x_0$,$F(x_0+0)=\lim\limits_{x\to x_0^+}F(x)=F(x_0)$
+
+> 由右连续性可知，在使用公式$4.1$时不需要纠结取等的问题。注意离散型随机变量没有左连续，而连续型有
 
 $$
 \begin{aligned}
@@ -420,8 +448,6 @@ $$
 &=F(x_0+0)-F(x_0-0)
 \end{aligned}
 $$
-
-由右连续性可知，在使用公式$4.1$时不需要纠结取等的问题。注意离散型随机变量没有左连续，而连续型有
 
 [^410]:还有一种定义形式，小于等于变成了仅小于
 [^411]: 三个性质是分布函数的充分必要性质.即具有上述三个性质的实函数，一定可以作为某个随机变量的分布函数.
@@ -442,12 +468,12 @@ $$
 
 $$
 P\{a<X<b\}=\int_a^bf(x)dx=F(b)-F(a);两边取等或不取都一样\\
-f(x)=\frac{F(x)}{dx};不需要考虑间断点导数
+f(x)=\frac{F(x)}{dx};不需要考虑间断点的导数
 $$
 
 #### 定义
 
-设随机变量X的分布函数为F(x),若存在**非负函数**$f (x)$，使得对任意实数x，都有：
+设随机变量X的分布函数为F(x),若存在**非负函数**$f(x)$，使得对任意实数x，都有：
 $$
 F(x)=\int_{-\infty}^x f(t)dt
 $$
@@ -469,14 +495,14 @@ f(x)=\lim_{\Delta x\to 0^+}\frac{F(x+\Delta x)-F(x)}{\Delta x}=\lim_{\Delta x \t
 P\{x<X\leq x+\Delta x\}\approx f(x)\Delta x
 $$
 
-|      | 离散型                                   | 连续型                                 |
-| ---- | ---------------------------------------- | -------------------------------------- |
-| 1    | 分布律$p_k=P\{X=x_k\}$                   | 密度函数$X\sim f(x)$（不唯一）         |
-| 2    | $F(x)=\sum\limits_{x_k\leq x}P\{X=x_k\}$ | $F(x)=\int_{-\infty}^xf(t)dt$          |
-| 3    | $P\{X=x_k\}=F(x_k)-F(x_k-0)$             | $f(x)=F'(x)$                           |
-| 4    | F(x)为阶梯函数，右连续                   | F(x)为连续函数                         |
-| 5    | $P\{X=a\}\geq 0,\forall a\in\mathbb{R}$  | $P\{X=a\}=0,\forall a\in \mathbb{R}$   |
-| 6    | $P\{X=a\}=0\Leftrightarrow不可能事件$    | $P\{X=a\}=0\nLeftrightarrow不可能事件$ |
+|     | 离散型                                   | 连续型                                 |
+| --- | ---------------------------------------- | -------------------------------------- |
+| 1   | 分布律$p_k=P\{X=x_k\}$                   | 密度函数$X\sim f(x)$（不唯一）         |
+| 2   | $F(x)=\sum\limits_{x_k\leq x}P\{X=x_k\}$ | $F(x)=\int_{-\infty}^xf(t)dt$          |
+| 3   | $P\{X=x_k\}=F(x_k)-F(x_k-0)$             | $f(x)=F'(x)$                           |
+| 4   | F(x)为阶梯函数，右连续                   | F(x)为连续函数                         |
+| 5   | $P\{X=a\}\geq 0,\forall a\in\mathbb{R}$  | $P\{X=a\}=0,\forall a\in \mathbb{R}$   |
+| 6   | $P\{X=a\}=0\Leftrightarrow不可能事件$    | $P\{X=a\}=0\nLeftrightarrow不可能事件$ |
 
 ### 4-3 均匀分布与几何概型
 
@@ -536,12 +562,12 @@ $$
 
 #### 正态分布的一些性质
 
-1. 如果 $X \sim N\left(\mu, \sigma^{2}\right)$ 且a与b为实数，那么 $a X+b \sim N\left(a \mu+b,(a \sigma)^{2}\right)$
-2. 如果 $X \sim N\left(\mu_{X}, \sigma_{X}^{2}\right)$ 与 $Y \sim N\left(\mu_{Y}, \sigma_{Y}^{2}\right)$ 是统计独立的正态随机变量，那么：
+1. (?线性) 如果 $X \sim N\left(\mu, \sigma^{2}\right)$ 且a与b为实数，那么 $a X+b \sim N\left(a \mu+b,(a \sigma)^{2}\right)$
+2. (?加减) 如果 $X \sim N\left(\mu_{X}, \sigma_{X}^{2}\right)$ 与 $Y \sim N\left(\mu_{Y}, \sigma_{Y}^{2}\right)$ 是统计独立的正态随机变量，那么：
    - 它们的和地满足正态分布 $U=X+Y \sim N\left(\mu_{X}+\mu_{Y}, \sigma_{X}^{2}+\sigma_{Y}^{2}\right)$
    - 它们的差也满足正态分布 $V=X-Y \sim N\left(\mu_{X}-\mu_{Y}, \sigma_{X}^{2}+\sigma_{Y}^{2}\right)$
    - U与V两者是相互独立的。（要求X与Y的方差相等）。
-3. 如果 $X \sim N\left(0, \sigma_{X}^{2}\right)$ 和 $Y \sim N\left(0, \sigma_{Y}^{2}\right)$ 是独立常态随机变量，那
+3. (?乘除) 如果 $X \sim N\left(0, \sigma_{X}^{2}\right)$ 和 $Y \sim N\left(0, \sigma_{Y}^{2}\right)$ 是独立常态随机变量，那
    - 它们的积XY服从概率密度函数为p的分布$p(z)=\frac{1}{\pi \sigma_{X} \sigma_{Y}} K_{0}\left(\frac{|z|}{\sigma_{X} \sigma_{Y}}\right),$ 其中 $K_{0}$ 是修正贝塞尔函数 $(\text { modified Bessel function })$
    - 它们的比符合柯西分布，满足 $X / Y \sim \operatorname{Cauchy}\left(0, \sigma_{X} / \sigma_{Y}\right)$
 4. 如果 $X_{1}, \cdots, X_{n}$ 为独立标准常态随机变雷, 那么 $X_{1}^{2}+\cdots+X_{n}^{2}$ 服从自由度为n的卡方分布。
@@ -550,9 +576,7 @@ $$
 
 设随机变量X的概率密度函数为$\varphi(x)=\frac{1}{\sqrt{2\pi}}e^{-\frac{x^2}{2}}$,$-\infin<x<+\infin$,则称X服从标准正态分布，记作$X\sim N(0,1)$
 
-计算标准正态分布时，可以使用查表，利用计算机等方法来实现Excel函数为`NORMDIST`
-
- [正态分布excel表示例](概率论与数理统计.assets\正态分布.xlsx)
+> 计算标准正态分布时，可以使用查表，利用计算机等方法来实现Excel函数为`NORMDIST` [标准正态分布分布函数值excel表示例](附.assets\正态分布.xlsx)
 
 ## 五、二维连续型随机变量
 
@@ -566,11 +590,13 @@ $$
 
 #### 二维随机变量的分布函数
 
-**定义**：设X为随机变量，其分布函数定义为：$F(x)=P\{X\leq x\},-\infty<x<+\infty$
+对于一维随机变量，设X为随机变量，其分布函数定义为：$F(x)=P\{X\leq x\},-\infty<x<+\infty$
 
-$X\leftrightarrow Q$,$x\leftrightarrow Q_0$$F(Q_0)=P\{Q\leq Q_0\},Q_0\in \mathbb{R}$
+推广到二维：$X\rightarrow Q$,$x\rightarrow Q_0$;$F(Q_0)=P\{Q\leq Q_0\},Q_0\in \mathbb{R}$
 
-$R\rightarrow R^2$,$Q\leftrightarrow (X,Y)$,$Q_0\leftrightarrow (x,y)$:
+$R\rightarrow R^2$,$Q\rightarrow (X,Y)$,$Q_0\rightarrow (x,y)$
+
+故二维随机变量的分布函数的定义为：
 $$
 F(x,y)\overset{\Delta}{=}F(Q_0)=P\{Q\leq Q_0\}=P\{(X,Y)\leq(x,y)\}=P\{X\leq x,Y\leq y\}
 $$
@@ -662,7 +688,7 @@ $$
 
 **定义** ：设$(X,Y)$为二维连续型随机变量，联合密度函数为$f(x,y)$，边缘密度分别为$f_X(x),f_Y(y)$，则对于一切$f_Y(y)>0$的y，在给定$Y=y$条件下，X的**条件分布函数**和**条件密度函数**分别为
 $$
-F_{X|Y}(x|y)=\int_{-\infty}^x\frac{f(u,y)}{f_Y(y)}du \ \ \ \
+F_{X|Y}(x|y)=\int_{-\infty}^x\frac{f(u,y)}{f_Y(y)}du \\
 f_{X|Y}(x|y)=\frac{f(x,y)}{f_Y(y)}
 $$
 同理，对于一切$f_X(x)>0$的x，在给定$X=x$的条件下，Y的条件分布函数和条件密度函数分别为
@@ -745,8 +771,10 @@ $$
 
 已知二维连续型随机变量联合密度函数和它的某个函数，求新的变量的密度函数的方法
 
-- 分布函数法
-- 密度变换公式法
+1. 分布函数法
+2. 密度变换公式法
+
+##### 1.分布函数法
 
 设X为连续型随机变量，密度函数为$f(x)$,$-\infty<x<+\infty$,$Y=g(X)$为随机变量X的函数，若Y是连续型随机变量，如何求解Y的密度函数，先求Y的分布函数：
 $$
@@ -756,11 +784,12 @@ $$
 
 此法也叫“**分布函数法**”或“**一般方法**”。
 
-<p hidden >
-特别，当$g(x)$为严格单调增可导时，比如$g(x)$为严格单调可导时，且其反函数为$h(y)$，于是$h'(y)\geq 0$.当X取遍所有可能取值时$Y=g(X)$的取值范围为$[\alpha,\beta]$.于是：
-1. 当$y<\alpha $时，$F_Y(y)=P\{Y\leq y\}=0$;
+特别地，当$g(x)$为严格单调增可导时，比如$g(x)$为严格单调可导时，且其反函数为$h(y)$，于是$h'(y)\geq 0$.当X取遍所有可能取值时$Y=g(X)$的取值范围为$[\alpha,\beta]$.于是：
+
+1. 当$y<\alpha$时，$F_Y(y)=P\{Y\leq y\}=0$;
 2. 当$y>\beta$时，$F_Y(y)=P\{Y\leq y\}=1$;
 3. 当$\alpha\leq y\leq \beta$时，$F_Y(y)=P\{Y\leq y\}=P\{X\leq h(y)\}=F_X[h(y)]$
+
 $$
 \Rightarrow
 f_Y(y)=\frac{\mathrm{d} F_Y(y)}{\mathrm{d}y}=
@@ -776,10 +805,10 @@ f_X[h(y)]\cdot [-h'(y)],&\alpha\leq y\leq \beta\\
 0,&\text{其他}
 \end{cases}
 $$
-</p>
+
+##### 2.密度变换公式法
 
 **定理**：又称为由X到Y的**密度变换公式**
-
 设随机变量X具有密度函数$f_X(x)$,$-\infty<x<+\infty$，又设函数$y=g(x)$**单调且处处可导**，并具有反函数$x=h(y)$,则$Y=g(X)$为连续型随机变量，且其密度函数为：
 $$
 f_Y(y)=\begin{cases}
@@ -895,12 +924,15 @@ $$
 1. $E(c)=c$，c是常数
 2. $E(cX)=cE(X)$,c是常数
 3. $E(aX+b)=aE(X)+b$,a,b为常数
-4. $E(X+Y)=E(X)+E(Y)$;<br>$E(c_1X_1+\cdots+c_nX_n)=c_1E(X_1)+\cdots+c_nE(X_n)$数学期望是线性算子
-5. 若X与Y独立，则$E(XY)=E(X)E(Y)$.<br>若$X_1,X_2,\dots,X_n$相互独立，则$E(X_1X_2\cdots X_n)=E(X_1)E(X_2)\cdots E(X_n)$
+4. $E(X+Y)=E(X)+E(Y)$;
+   1. $E(c_1X_1+\cdots+c_nX_n)=c_1E(X_1)+\cdots+c_nE(X_n)$
+   2. 数学期望是线性算子
+5. 若X与Y独立，则$E(XY)=E(X)E(Y)$.
+   1. 若$X_1,X_2,\dots,X_n$相互独立，则$E(X_1X_2\cdots X_n)=E(X_1)E(X_2)\cdots E(X_n)$
 
 $$
 \begin{aligned}
-Y&=
+求Y&=
 \left|
 \begin{array}
 {cccc}\boldsymbol{X}_{\mathbf{1 1}} & \boldsymbol{X}_{\mathbf{1 2}} & \cdots & \boldsymbol{X}_{\mathbf{1 n}} \\ \boldsymbol{X}_{\mathbf{2 1}} & \boldsymbol{X}_{\mathbf{2 2}} & \cdots & \boldsymbol{X}_{\mathbf{2 n}} \\ \vdots & \vdots & & \vdots \\ \boldsymbol{X}_{\boldsymbol{n 1}} & \boldsymbol{X}_{\boldsymbol{n 2}} & \cdots & \boldsymbol{X}_{\boldsymbol{n n}}
@@ -929,18 +961,18 @@ $$
 
 ### 常见分布的期望和方差
 
-| （离散）分布名称       | 分布                                                   | 期望        | 方差              |
+| （离散）分布名称     | 分布                                                   | 期望        | 方差              |
 | -------------------- | ------------------------------------------------------ | ----------- | ----------------- |
 | (0-1)分布            | $\left(\begin{matrix}0 &1\\1-p & p\end{matrix}\right)$ | p           | p(1-p)            |
 | 二项分布$B(n,p)$     | $C_n^k p^k(1-p)^{n-k}$                                 | np          | np(1-p)           |
 | 几何分布$G(p)$       | $(1-p)^k$                                              | $\frac{1}p$ | $\frac{1-p}{p^2}$ |
 | 泊松分布$P(\lambda)$ | $\frac{\lambda^k e^{-\lambda}}{k!}$                    | $\lambda$   | $\lambda$         |
 
-| （连续）分布名称          | 分布                                                         | 期望                | 方差                 |
-| ------------------------- | ------------------------------------------------------------ | ------------------- | -------------------- |
+| （连续）分布名称          | 分布                                                                       | 期望                | 方差                 |
+| ------------------------- | -------------------------------------------------------------------------- | ------------------- | -------------------- |
 | 均匀分布$U[a,b]$          | $f(x)=\begin{cases}\frac 1{b-a},&a\leq x\leq b\\0,&\text{其他}\end{cases}$ | $\frac{a+b}{2}$     | $\frac{(b-a)^2}{12}$ |
-| 指数分布$E(\lambda)$      | $\begin{cases}\lambda e^{-\lambda x},&x>0\\0,&x\leq 0\end{cases}$ | $\frac{1}{\lambda}$ | $\frac 1{\lambda^2}$ |
-| 正态分布$N(\mu,\sigma^2)$ | $f(x)=\frac 1{\sqrt{2\pi}\sigma}e^{-\frac{(x-\mu)^2}{2\sigma^2}}$ | $\mu$               | $\sigma$             |
+| 指数分布$E(\lambda)$      | $\begin{cases}\lambda e^{-\lambda x},&x>0\\0,&x\leq 0\end{cases}$          | $\frac{1}{\lambda}$ | $\frac 1{\lambda^2}$ |
+| 正态分布$N(\mu,\sigma^2)$ | $f(x)=\frac 1{\sqrt{2\pi}\sigma}e^{-\frac{(x-\mu)^2}{2\sigma^2}}$          | $\mu$               | $\sigma$             |
 
 ### 协方差
 
