--- a/马克思主义基本原理/马克思主义基本原理.md
+++ b/马克思主义基本原理/马克思主义基本原理.md
@@ -1,58 +1,71 @@
-马克思主义基本原理
+# 马克思主义基本原理
 
 [TOC]
+
 ## 绪论
+
 ### 马克思主义是什么
+
 马克思主义是马克思主义理论体系的简称。马克思主义理论体系覆盖了马克思本人关于未来社会形态，科学社会主义的全部观点和全部学说。从不同的角度可以对什么是马克思主义作出不同的回答：
+
 - 从**它的创造者、继承者的认识成果**讲，马克思主义是马克思、恩格斯创立的，由其后各个时期、各个民族的马克思主义者不断丰富和发展的观点和学说的体系。
 - 从**阶级属性**讲，马克思主义是无产阶级争取自身解放和整个人类解放的科学理论，是关于无产阶级斗争的性质、目的和解放条件的学说。
 - 从**研究对象和主要内容**讲，马克思主义是无产阶级的世界观和方法论，是关于自然、社会和思维发展的普遍规律的学说。
 马克思主义是一个完整的体系，其中**马克思主义哲学、马克思主义政治经济学和科学社会主义**是马克思主义理论体系中不可分割的三个重要组成部分。
+
 ### 马克思主义的产生和发展
+
 十八十九世纪的欧洲，一方面封建主义与资本主义的矛盾日益突出，另一方面，资本主义内部的矛盾也迅速激化无产阶级开始走上历史舞台，动荡的年代催生了伟大的先哲，马克思主义哲学也由此萌芽。马克思主义主要批判继承**德国古典哲学、英国古典政治经济学和英法空想社会主义**而创立的崭新的无产阶级思想的科学体系。
 
 马克思主义哲学吸取的黑格尔哲学中的合理内核是辩证法
 
 ### 马克思主义的鲜明特征
+
 马克思主义是**科学性与革命性的统一**，马克思主义理论的核心是其认识论其中包含了**历史唯物主义**的对于人类社会发展的认识方法和**辩证唯物主义**的对待身边的人、事、物的方法。
 
 ## 第一章 世界的物质性及其发展规律
+
 世界的本原是什么的问题，是哲学中最为重要的命题之一。基于对这一命题的不同认知，哲学界也分为了唯物与唯心两大重要流派。唯物主义者认为世界的本原是物质，物质是独立于意识和精神而存在的、客观的东西；唯心主义者则认为世界的本原是意识或者“灵魂”，物质是居于第二位的。
 马克思主义在世界本原问题上是彻底的唯物主义的，要谈到这一点，就必须谈到马克思主义的物质概念，以及物质世界中最基本的存在形式——运动。
 
 ### 1.1 物质的概念(世界从哪来，世界的本源是什么)
+
 - 古希腊哲学家*德谟克利特*提出了**原子论**，认为世界万物都是由不可分割的物质粒子原子组成的
 - 17世纪，*霍布斯*提出了**物体**的概念，他认为世界上真实存在的只有物质所构成的物体，并且他们都是可认知的
 - 18世纪英国的经验主义哲学家*贝克莱*提出过存在就是被感知
 - 莱布尼兹提出了*单子论*。
-|唯物主义|唯心主义|
-|--|--|
-|认为世界的本源是物质，物质是独立于意识和精神二存在的、客观的东西|唯心主义认为世界的本源是意识或者“灵魂”，物质是居于第二位的|
+| 唯物主义                                                         | 唯心主义                                                   |
+| ---------------------------------------------------------------- | ---------------------------------------------------------- |
+| 认为世界的本源是物质，物质是独立于意识和精神二存在的、客观的东西 | 唯心主义认为世界的本源是意识或者“灵魂”，物质是居于第二位的 |
 物质的存在是客观的，概念和观念是来自于对客观存在的物质的抽象。物质的存在不依赖于概念和感觉，相反人的感觉喝意识要来源于物质。
 哲学上的物质是一种简称，我们用这种简称把感官感知的许多不同的事物，依照其**共同属性**概括起来，这种概括与自然科学与生活中所指的具体物质形态和结构的那个概念是属于共性和个性的关系，二者既有区别又有联系。马克思主义物质观解释的是自然和社会的物质性，为他从自然到人类社会彻底的维物主义。马克思主义物质观一方面被不断发展的自然科学、社会科学和思维科学所证实和丰富；另一方面又为相关科学的发展提供了理论思维的方向原则和基本方向。在实践过程中一切从实际出发，理论联系实际，实事求是，在实践中检验和发展真理，这一系列思想路线都是马克思主义物质观的升华和具体化的运用。尤其是在今天唯物论与唯心论、科学与迷信的斗争仍未停止，坚持马克思主义物质观仍有重要的理论与实践意义
 
 ### 1.2 社会生活的本质
-####  1.2.1实践
+
+#### 1.2.1实践
+
 >关于实践的思考最早可以追溯到古希腊的亚里士多德，它曾吧人类的所有生活和行为都称为实践，后来他吧人类的生产活动和自由活动分割开来，认为人的自由活动才是实践
 >弗兰西斯培根把时间分为两类，一是在物理学之下的机械学，即自然科学和技术，一是在形而上学之下的所谓幻术，偏向伦理学和道德学[^1211]
 >德国哲学家费尔巴哈认为人类的实践就是人的生活[^1212]
 马克思主义认为，实在是人感性的物质活动，也是人能动性的表现，克服了实践的二元论。
 全部社会生活在本质上是**实践**的，这要求我们从实践出发区理解社会，把社会生活[^1213]当作实践来理解
 如何理解**社会生活本质是实践**（三个方面）
-1. **实践**是社会关系形成的基础。实践内在地包含着三重关系
-	1. 人与自然的关系
-	2. 人与人的关系
-	3. 人与自身意识的关系
-	这些关系又构成了基本的社会关系，也就是物质的社会关系和思想的社会关系
-1. **实践形成了社会生活的基本领域**。人们通过实践活动改造自然、改造社会和改造人自身，形成了社会生活的基本领域，即社会的物质生活、政治生活和精神生活领域。物质生活的生产方式制约着整个社会生活、政治生活和精神生活的过程。
-2. **实践构成了社会发展的动力**。人的历史是由自己创造，社会的发展不过是人的实践活动在时间和空间中展开的过程。其中物质生产实践构成了社会发展的根本动力。在阶级社会中，阶级斗争这种实践形式构成了社会发展的直接动力。
+
+1. **实践**是社会关系形成的基础。实践内在地包含着三重关系。这些关系又构成了基本的社会关系，也就是物质的社会关系和思想的社会关系
+   1. 人与自然的关系
+   2. 人与人的关系
+   3. 人与自身意识的关系
+2. **实践形成了社会生活的基本领域**。人们通过实践活动改造自然、改造社会和改造人自身，形成了社会生活的基本领域，即社会的物质生活、政治生活和精神生活领域。物质生活的生产方式制约着整个社会生活、政治生活和精神生活的过程。
+3. **实践构成了社会发展的动力**。人的历史是由自己创造，社会的发展不过是人的实践活动在时间和空间中展开的过程。其中物质生产实践构成了社会发展的根本动力。在阶级社会中，阶级斗争这种实践形式构成了社会发展的直接动力。
 
 社会生活的全部内容就是不断进行的社会实践。实践既是人的自觉能动性的表现，也是人的自觉能动性的根源，是人的生命表现和本质特性
 
 [^1211]:认为前者更重要
 [^1212]:更多地认识为吃喝和享用，使得他的观点脱离了具体的社会关系，过度强调单纯的生物活动
 [^1213]:我们所说的社会生活就是人们对各种社会活动的总称
-####  1.2.2意识
+
+#### 1.2.2意识
+
 **意识是怎么？物质决定意识，意识反应物质** 意识是物质世界长期发展的产物，是人脑的机能和属性，是物质世界的主观印象。
 
 意识从**起源**来看，是自然界长期发展的产物，经历了由一切物质所具有的反应特性，是低等生物的刺激感应性，再到高等动物的感觉喝心理，最终发展成为人类意识的三个阶段。
@@ -61,7 +74,7 @@
 
 >观念的东西不外乎移入人的头脑，并在人的头脑中改造的物质的东西而已——马克思
 
-###### 意识对物质有能动作用
+##### 意识对物质有能动作用
 
 主要表现为
 
@@ -74,7 +87,7 @@
 
 1. 首先，要尊重客观规律，只有从实际出发，努力认识和把握事物的发展规律，才能获得正确的认识
 2. 其次，实践是发挥人的主观能动作用的基本途径。意识通过实践反作用于物质的过程，就是把观念的东西化为物质的感性活动，变为现实的物质力量，也就是化为实践；通过实践是主观见于客观，通过实践而能动地认识世界，用通过实践能动地改造世界
-3. 第三，主观能动作用的发挥。在认识程度上和改造程度上，都依赖于一定的物质条件和物质手段 
+3. 第三，主观能动作用的发挥。在认识程度上和改造程度上，都依赖于一定的物质条件和物质手段
 4. 最后，我们必须正确估计一时能动作用的大小。夸大意识的能动作用就导致盲动、冒险和“左”的错误；否认意识的能动作用，则会导致僵化、保守右的错误
 
 ### 1.3世界的统一性
@@ -87,16 +100,16 @@
 
 - 其二，**思想与现实世界是什么关系？**思维能否认识现实世界？也就是说思维能否认识和正确认识存在的问题。
 
-|哲学形态|世界是xxx||
-|---|---|---|
-|唯心主义形而上学|精神的|不运动、不变化|
-|唯心主义辩证法|精神的|处在变化发展中|
-|唯物主义形而上学|物质的|不变化、不发展|
-|唯物主义辩证法|物质的|处在变化之中|
+| 哲学形态         | 世界是xxx |                |
+| ---------------- | --------- | -------------- |
+| 唯心主义形而上学 | 精神的    | 不运动、不变化 |
+| 唯心主义辩证法   | 精神的    | 处在变化发展中 |
+| 唯物主义形而上学 | 物质的    | 不变化、不发展 |
+| 唯物主义辩证法   | 物质的    | 处在变化之中   |
 
 马克思主义哲学认为世界的本源是物质。不仅自然界是物质的，人类社会也具有物质性，**世界真正的统一性就在于它的物质性**
 
-**世界的统一性**
+#### 世界的统一性
 
 - 首先，**我们要正确理解物质、运动、事件、空间的内在统一性**。从根本上说，世界是物质的，世界是运动的。时间和空间则是物质运动的存在形式。一切事物、现象，共同的本质和本原始物质，而且都统一于物质。
 - 第二，**要正确认识意识在起源、本质和作用上所表现出来的物质统一性**。意识在起源上是自然界和人类社会长期发展的产物，在本质上是物质世界的主观映像和反应，而意识的能动作用则是在实践基础上，积极反映世界和改造世界的能力和活动。正如“狼孩”的案例说明的问题一样，意识的产生、本质和作用都离不开物质世界。
@@ -110,13 +123,17 @@
 #### 1.4 事物的普遍联系
 
 #### 客观规律的存在性
->规律表现为事务本质的联系，是事务的内在规律；<br>规律是事务的必然联系，是事物必定如此、确定不移的趋势；<br>规律是事务的稳定联系，是丰富多彩的现象背后的共性、稳定性、可重复性。
+
+> - 规律表现为事务本质的联系，是事务的内在规律；
+> - 规律是事务的必然联系，是事物必定如此、确定不移的趋势；
+> - 规律是事务的稳定联系，是丰富多彩的现象背后的共性、稳定性、可重复性。
 
 **实践的本质**是人类有意识地认识物质世界的规律并利用认识了的规律去改造物质世界的过程
 唯物辩证法认为规律是事务运动发展中的本质的、必然的、稳定地联系。
 
 我们面临的规律主要有两类：一是社会规律，二是自然规律
 自然规律与社会规律的联系：
+
 - 都具有客观性，不以人的意志为转移；
 - 社会规律是自然规律长期发展的结果，自然界与人的分化是自然规律与社会规律分化的前提。**社会规律**是高级的运动规律，自然规律是社会规律的接触，社会规律是自然规律的延伸；
 - 二者都能在人的实践中被反映、认识和利用；
@@ -125,6 +142,7 @@
 **自然规律**是客观物质世界低级的运动规律。它是作为一种盲目的无意识力量在起作用，自然规律通过食物之间自然而然的方式，体现出他们的相互作用，事实上，自然规律只要具备同样的客观物质条件，就可以以完全相同的方式反复出现，而**社会规律**则是人自己的社会行动规律，是人的能动的创造过程，是合乎目的性和合乎规律性相统一的过程，是决定性和选择性相统一的过程，是客观规律性和人的自觉活动相统一的过程
 
 认识规律常用的方法是**归纳和演绎**以及**分析和综合**
+
 - 归纳就是从个别事实中概括出一般性结论，是一种由个别性前提过渡到一般性结论的推理形式。
 - 演绎法，就是从一般原理走向个别结论的思维方法，是由一般性原则推导个别结论的推理形式。
 一方面，归纳和演绎互为前提。归纳是演绎的基础，演绎则为归纳提供理论依据，证明归纳的目的和方向。另一方面，归纳和演绎相互补充。归纳虽然能概括出同类事物的共性，但不能区分本质属性和非本质属性，不能摒弃片面性和表面性
@@ -132,6 +150,7 @@
 **分析和综合**是分解和组合相结合的思维方法。
 
 **区别**：
+
 - 分析是在思维中，吧认识对象分解为各个部分、方面、要素，以便分析加以研究的思维方法。分析法通过分析研究，从中找出构成认识对象的基础部分和本质方面。
 - 综合是在把整体分解为各个因素的基础上，再组合成一个整体的思维活动。它是在思维中，把对象的各个本质方面，按其内在联系，有机地结合成一个统一的整体。
 
@@ -139,13 +158,15 @@
 分析是综合的基础，综合是分析的完成。若人的思维仅仅停留在分析事物的现象以及从现象中找本质上，那么它也只能停留在抽象的本质，而不能解释其具体的表现；若人的思维仅仅停留在综合，那么就会导致停留于整体的感性直观，而不能深刻认识事物的内在本质。综合要分析作为基础的开始，同时综合的结果也是对分析的验证。
 
 #### 联系的普遍性
+
 联系指的是事物之间，以及事物内部各要素之间，相互影响、相互制约和相互作用的关系。
 
 联系的特点：
+
 1. 联系具有**客观性**，联系是物质世界所固有的，不是人空想出来的，并且不以人的意识为转移
 2. 联系具有**普遍性**，联系不是个别事物之中暂时的、特殊的关系，而是一切事物现象和过程的普遍本性
-	- 世界上一切事物、现象和过程都不能孤立地存在，都必须同其他事物发生关系。
-	- 任何事物、现象、过程内部各个部分要素和换届之间也是相互作用和相互联系的
+   - 世界上一切事物、现象和过程都不能孤立地存在，都必须同其他事物发生关系。
+   - 任何事物、现象、过程内部各个部分要素和换届之间也是相互作用和相互联系的
 3. 联系具有**多样性**。具体的事物、现象和过程是多样的，他们的具体联系也是多样的。例如直接联系和间接联系、本质联系和非本质联系、内部联系和外部联系、必然联系和偶然联系
 4. 联系具有**系统性**。是联系普遍性发展的一个结果。所谓系统是指由相互联系的若干部分或要素组成的有机整体，他具有特定的性质和功能。系统是自然界和人类世界的普遍现象
 
@@ -171,10 +192,9 @@
 
 矛盾的特殊性包含着矛盾的普遍性，共性寓于个性之中；共性统摄着个性；矛盾的普遍性与特殊性在一定条件下可以相互转化。矛盾的普遍性与特殊性，共性与个性的有机统一，是关于矛盾问题的精髓。它既是客观事物本来的辩证法，又是指导人们正确认识的方法论
 
-**对立统一规律**
+对立统一规律
 
 - 第一，对立统一律揭示了普遍联系的根本内容，即一切事物的联系，从根本上说，都是互相对立的矛盾双方之间的联系；
-
 - 第二，对立统一规律揭示了事物发展的源泉、动力，其实就是事物内部矛盾双方的对立统一
 - 第三，对立统一规律是贯穿辩证法其他规律和范畴的中心线索，对立统一是唯物辩证法全部规律和范畴的实质。
 - 第四，对立统一规律揭示了唯物辩证法的最根本的认识方法，也就是**矛盾分析法**
@@ -204,15 +224,10 @@
 ### 2.1 认识的来源和方法
 
 > （唯心主义的论述）人的认识只是有变化的不真实的显示事物，不能认识永恒的、真实的理念。真实的理念在我们出生前就有了，我们只能忘却了。所以后天的感官只是为了帮助我们获得丢失的记忆罢了。——柏拉图
-
 > 人的思维和心灵就像是一块空白的蜡板，本身不会产生只是，而是从外部世界中获取知识的。——亚里士多德
-
 > **洛克**认为人天生的心灵好比白板，知识不是来自于天赋，而是来自于经验。他甚至还把经验细化为两类：一时感觉，是指外部世界来源的观念。他甚至还把经验细化为两类：一时感觉，是指外部世界来源的观念；二是反省，是指反思自身得出的观念。
-
 >**法国笛卡尔**承认外部感觉喝理性直观都能的得到认为感官会欺骗人，理性不会，而理性本身又是源自人类的天赋，所以他认为真正的知识只能来自于人的天赋，是人先天具有的
-
 > 法国的不可知论者休谟甚至否认了认识的可能性，他认为人们目前的知识都来自于感觉，但感觉却不知来源于何方。休谟认为人的认识完全来源于自身。他的这种不可知论早已被科学与实践否认
-
 > 毛泽东认为：“人的正确思想是从哪里来？是从天上掉下来的吗？不是。是自己头脑里固有的吗？不是。**人的正确思想，只能从社会实践中来。”
 
 以往的唯心主义哲学认为认识的主体是精神是意识，认识的客体是精神物质的对象化；而旧的唯物主义哲学认为认识的主体是人，认识的客体是物质世界。
@@ -239,7 +254,7 @@
 
 哲学意义上的价值，用于表示客体的属性和功能与主体需要间的效应关系。简单地说，客体能满足主体需要，客体对于主体就有价值；满足主体需要的程度越高，其价值就越大。反之，客体就无价值或价值较小
 
-**价值范畴**一方面具有客观性。这是指主体的存在及其需要、客体的存在及其属性和功能，这所有的一切都是客观的，创造价值的实践活动也是客观的。但同时，价值范畴又具有主体性，是主体内在尺度的表达。主体的变化也会改变价值的变化 
+**价值范畴**一方面具有客观性。这是指主体的存在及其需要、客体的存在及其属性和功能，这所有的一切都是客观的，创造价值的实践活动也是客观的。但同时，价值范畴又具有主体性，是主体内在尺度的表达。主体的变化也会改变价值的变化
 
 **真理原则** 是指人类必须按照世界的本来面貌去认识和改造世界，追求和服从真理，实质上就是要求人要遵循“物的尺度”进行活动。价值原则则是指人类追求价值，注重效益，满足主体需要的原则，实际上是指人类应该按照“人的尺度”去认识和改造世界。
 
@@ -286,11 +301,11 @@
 2. 即使某些人一时还不能由实践作出检验，但无限发展的实践终将会对认识是否具有真理性做出具体的实践
 
 实践相对性（不确定性）
+
 1. 每一历史阶段的具体实践都不能完全验证或驳倒一切认识，只能证实和驳倒当时的部分认识。所以，我们要随着实践的发展，不断检验和发展人的认识。这也证明了实践对真理的认识和验证都是一个过程，而不是一个片段
 2. 即便是已经被实践证实的真理性认识，也还要继续接受新的实践的检验
 
 > “日常的经验只能抓住事物诱人的外观，但如果根据这种经验来判断，科学的真理就总会是奇谈怪论了。”——马克思
-
 > 中国古代的墨子就根据“众人耳目之实”来证明鬼魂的存在这就是经验论的错误之处
 
 ### 2.3 如何理解马克思主义认识论的伟大变革
@@ -323,13 +338,13 @@
 
 #### 社会存在和社会意识的辩证关系
 
-**社会存在决定社会意识**
+##### 社会存在决定社会意识
 
 1. 社会存在是社会意识内容的客观来源，社会意识则是社会物质生活过程及其条件的主观反映。
 2. 社会意识是人们社会物质交往的产物，他和语言一样，是在生产中由于交往活动的需要而产生的。
 3. 随着社会存在的发展，社会意识也迟早要相应地变化和发展
 
-**社会意识具有相对独立性**
+##### 社会意识具有相对独立性
 
 1. 社会意识的发展变化和社会存在的发展变化具有不完全同步性，社会意识可能落后于或先进与社会存在
 2. 社会意识的发展水平和经济水平具有不平衡性。
@@ -393,7 +408,6 @@
 #### 3.3.1 阶级
 
 > 人由类猿人进化而成的能制造和使用工具进行劳动、并能运用语言进行交际的高级动物。
-
 > 所谓阶级，就是这样一些大的集团，这些集团在历史上个一定的社会生产体系中所处的地位不同，同生产资料的关系不同，在社会劳动组织中所起的作用不同，因而取得归自己支配的那份社会财富的方式和多寡也不同。所谓阶级，就是这样一个集团，由于它们在一定社会经济结构中所处的地位不同，其中一个集团占有另一个集团的劳动。——列宁
 
 阶级划分的主要内容不是收入的高低，而是社会所处的地位不同。所谓无产阶级，不是指没有财产的人，而是指被迫通过出卖自己的劳动力以换取工资收入的人。他们的剩余劳动所创造的剩余价值会被资本家无偿占有
@@ -445,11 +459,8 @@
 **群众史观** 人民群众在社会变革中起到的是决定作用，而历史人物起到的至多也只能说是领导作用
 
 > **中国共产党的群众路线**：坚持人民群众自己解放自己，全心全意为人民服务，一切向人民群众负责，虚心向群众学习等等
-
 > 我国民主主义革命时期*毛泽东*提出了：一切为了群众，一切依靠群众，从群众中来到群众中去
-
 > *邓小平*要求把人民拥护不拥护，人民赞成不赞成，人民高性能不高兴，人民答应不答应，作为制定各项方针政策的出发点和落脚点
-
 > *三个代表重要思想*强调我们党要代表最广大人民的根本利益。
 >
 > *科学发展观*强调坚持以人为本，在建设中国特色社会主义的伟大实践中，要尊重人民的主体地位，始终把人民利益放在第一位，把实现好、维护好、发展好最广大人民的根本利益作为- -切工作的出发点和落脚点;要发挥人民的首创精神，保障人民各项权益，走共同富裕道路，促进人的全民发展，做到发展为了人民，发展依靠人民，发展成果由人民共享，始终坚持全心全意为人民服务的宗旨。
@@ -491,10 +502,6 @@
 城市的行会制度和农村自给自足的土地制度制约了商品经济的形成
 
 #### 4.1.4 资本主义生产关系的产生
-
-
-
-
 
 ### 4.2 资本主义生产方式的形成
 
@@ -549,7 +556,7 @@
 
 #### 5.2.2 价值规律
 
-**价值规律**
+价值规律
 
 1. 自发的调节生产资料和劳动力在社会各生产部门之间的分配比例
 2. 自发地促进社会生产力的发展
@@ -578,4 +585,3 @@
 ### 5.5 马克思劳动价值论的意义
 
 劳动价值论是古典经济学的
-
