概统笔记整理 数电触发器图

--- a/概率论与数理统计/概率论与数理统计/数理统计.md
+++ b/概率论与数理统计/概率论与数理统计/数理统计.md
@@ -6,13 +6,17 @@
 - 统计推断（重点介绍）
   - 抽样分布
   - 参数估计
+    - 点估计
+      - 矩估计法
+      - 极大似然估计法
+    - 区间估计
   - 假设检验
 
 [toc]
 
-## 抽样分布
+## 9 抽样分布
 
-### 总体与样本
+### 9-1 总体与样本
 
 **抽样**是按照某种原则从所研究的全部对象中抽取部分研究对象
 
@@ -85,7 +89,7 @@
 
    用来反映**总体中心矩**的信息
 
-### 抽样分布介绍
+### 9-2 抽样分布介绍
 
 统计量的分布称为**抽样分布**
 
@@ -96,7 +100,7 @@
 1. $\begin{array}{ll} N(0,1): & P\left\{Z>z_{\alpha}\right\}=\alpha\end{array}$
 
 2. $\chi^{2}$ -分布 $: \quad \chi^{2}=\sum\limits_{i=1}^{n} X_{i}^{2} \sim \chi^{2}(n), P\left\{\chi^{2}>\chi_{\alpha}^{2}(n)\right\}=\alpha$
-3. $t$ 分布 $: \quad t=\frac{X}{\sqrt{\boldsymbol{Y} / \boldsymbol{n}}} \sim \boldsymbol{t}(\boldsymbol{n}), \boldsymbol{P}\left\{t>t_{\alpha}(\boldsymbol{n})\right\}=\boldsymbol{\alpha}$
+3. $t$ 分布 ：$t=\frac{X}{\sqrt{Y/n}}\sim t(n),P\left\{t>t_{\alpha}(n)\right\}=\alpha$
 4. $F$ -分布 $: F=\frac{X / n_{1}}{Y / n_{2}} \sim F\left(n_{1}, n_{2}\right), P\left\{F>F_{\alpha}\left(n_{1}, n_{2}\right)\right\}=\alpha$
 
 **自由度**表示分布中独立地随机变量的个数
@@ -173,7 +177,7 @@ $$
 
 分位点的定理：$F_{1-\alpha}(n_2,n_1)=\frac 1{F_\alpha(n_1,n_2)}$
 
-### 正态总体的抽样分布
+### 9-3 正态总体的抽样分布
 
 **定理1** 设$X_1,\cdots,X_n$为取自$N(\mu,\sigma^2)$的容量为n的样本，$\bar{X}=\frac 1n\sum\limits_{i=1}^n X_i$,$S^2=\frac 1 {n-1}\sum\limits_{i=1}^n(X_i-\bar{X})^2$.则有
 
@@ -193,3 +197,13 @@ $$
 1. $\overline{X}-\overline{Y}\sim N(\mu_1-\mu_2,\frac{\sigma^2_1}{n_1}+\frac{\sigma_2^2}{n_2})$
 2. $F=\frac{S_{1}^{2} / \sigma_{1}^{2}}{S_{2}^{2} / \sigma_{2}^{2}} \sim F\left(n_{1}-1, n_{2}-1\right)$
 3. 假设 $\sigma_{1}^{2}=\sigma_{2}^{2}=\sigma^{2},$ 则 $T=\frac{(\bar{X}-\bar{Y})-\left(\mu_{1}-\mu_{2}\right)}{S_{w} \sqrt{\frac{1}{n_{1}}+\frac{1}{n_{2}}}} \sim t\left(n_{1}+n_{2}-2\right)$
+
+### 9-4 经验分布函数
+
+### 9-5 频率分布表与直方图
+
+## 10 点估计
+
+## 11 区间估计
+
+## 12 假设检验
