--- a/概率论与数理统计/概率论与数理统计/概率论.md
+++ b/概率论与数理统计/概率论与数理统计/概率论.md
@@ -872,8 +872,8 @@ $F_N(z)=1-P\{X_1>z,\dots,X_n>z\}\xlongequal{\text{独立}}1-[1-F_{X_1}(z)]\cdots
 
 设系统L由两个独立地子系统L_1和L_2联接而成，联接的方式分别为1. 串联和2. 并联 。设$L_1$和$L_2$的寿命分别为X,Y。那么
 
-1. **串联**系统的寿命Z为Z=max{X,Y}
-2. **并联**系统的寿命Z为Z=min{X,Y}
+1. **串联**系统的寿命Z为Z=min{X,Y}
+2. **并联**系统的寿命Z为Z=max{X,Y}
 
 ## 七、数字特征
 
@@ -1002,7 +1002,7 @@ $$
 说明：
 
 - 相关系数与指标变量的度量单位无关（是一个无量纲的量）
-- 相关系数并不是刻画了一般的函数关系，而只是刻画了“线性”关联的程度，当且仅当X与Y有严格的线性关系时，才有$|\rho_{XY}|$达到最大值1.即使X与Y有某种确定的函数关系时，也可能会有Cov(X,Y)=0
+- 相关系数并不是刻画了一般的函数关系，而只是刻画了“线性”关联的程度，当且仅当X与Y有严格的线性关系时，才有$|\rho_{XY}|$达到最大值1.即使X与Y有某种确定的函数关系时，也可能会有$Cov(X,Y)=0$
 
 **定理**：设$\rho_{XY}$存在，则下列命题等价：
 
@@ -1038,7 +1038,7 @@ $$
 
    $E\{[X-E(X)]^k[Y-E(Y)]^l\},k,l=0,1,2,\cdots$——X和Y的$k+l$阶混合中心矩
 
-**特别**$Cov(X,Y)=E\{[X-E(X)][Y-E(Y)]\}$为1+1阶混合中心矩
+**特别地**，$Cov(X,Y)=E\{[X-E(X)][Y-E(Y)]\}$为1+1阶混合中心矩
 
 $E\{[X-E(X)]^3\}$为偏度指标，描述$r.v.x$概率密度对称性
 
@@ -1081,6 +1081,8 @@ $$
 P\{|X-\mu|\geq\epsilon\}\leq \frac{\sigma^2}{\epsilon^2}
 $$
 
+证明过程如下：
+
 $$
 \begin{aligned}
 &P\{|X-\mu| \geq \varepsilon\}=\int_{|x-\mu| \geq \varepsilon} f(x) d x\\
@@ -1093,7 +1095,9 @@ $$
 
 #### 三个具体的大数定律
 
-##### 定理一:(契比雪夫大数定理)
+![知乎上的一个终结](https://pic1.zhimg.com/80/v2-610ab422fe593a5058d951343aa74f68_720w.jpg)
+
+##### 定理一：契比雪夫大数定理(样本算术均值和真实期望的关系)
 
 设随机变量$X_1,X_2,\dots,X_n,\cdots$相互独立，且具有相同的数学期望和方差:$E(X_k)=\mu$，$D(X_k)=\sigma^2$,$k=1,2,\cdots$,作前n个随机变量的算术平均$\bar{X}=\frac1{n}\sum\limits_{k=1}^{n}X_k$,则对于任意正数$\varepsilon$有
 $$
@@ -1105,13 +1109,13 @@ E(X_1)=E(X_2)=\cdots =E(X_k)=\mu
 $$
 (这个接近是概率意义下的接近）即在定理条件下, n个随机变量的算术平均, 当n无限增加时, 几乎变成一个常数。
 
-###### 定理一的**另一种叙述**
+###### 定理一的另一种叙述
 
 设随机变量 $ X_{1}, X_{2}, \cdots, X_{n}, \cdots$ 相互独立且具有相同的数学期望 和方差：E $\left(X_{k}\right)=\mu$$D\left(X_{k}\right)=\sigma^{2}(k=1,2, \cdots),$ 则序列 $X=\frac{1}{n} \sum\limits_{k=1}^{n} X_{k}$依概率收敘[^依概率收敛]于 $\mu,$ 即 $\boldsymbol{X} \overset P\longrightarrow \mu$
 
-[^依概率收敛]:设 $Y_{1}, Y_{2}, \cdots, Y_{n}$ 是一个随数,若对于任意正数 $\varepsilon$有 $\lim_{n \rightarrow \infty} P\left\{\left|Y_{n}-a\right|<\varepsilon\right\}=1$则称序列 $Y_{1}, Y_{2}, \cdots, Y_{n}$依概率收?于 a,记为$Y_{n} \stackrel{P}{\longrightarrow} a$
+[^依概率收敛]:设 $Y_{1}, Y_{2}, \cdots, Y_{n}$ 是一个随数,若对于任意正数 $\varepsilon$有 $\lim_{n \rightarrow \infty} P\left\{\left|Y_{n}-a\right|<\varepsilon\right\}=1$则称序列 $Y_{1}, Y_{2}, \cdots, Y_{n}$依概率收于 a,记为$Y_{n} \stackrel{P}{\longrightarrow} a$
 
-##### 定理二（伯努利大数定律）
+##### 定理二：伯努利大数定律(概率与频率的关系）
 
 设 $n_{A}$ 是 $n$ 次独立重复试验中事件 $A$ 发生的次数, $p$ 是事件 $A$ 在每次试验中发生的概率, 则对于任意正数 $\varepsilon>0,$ 有
 
@@ -1124,7 +1128,7 @@ $$
 1. 伯努利大数定理实际上告诉我们频率依概率收敛到概率
 2. 伯努利大数定律是切比雪夫大数定律的特殊情形
 
-##### 定理三：辛钦大数定律
+##### 定理三：辛钦大数定律（算术平均值和数学期望的关系）
 
 设随机变量 $X_{1}, X_{2}, \cdots, X_{n}, \cdots$ 相互独立,服从同一分布, 且具有数学期望 $E\left(X_{k}\right)=\mu$$(k=1,2, \cdots),$ 则
 $$
@@ -1153,7 +1157,7 @@ $$
 
 当$n\to\infty$，随机变量序列$Y_n$的分布函数收敛于标准正态分布的分布函数
 
-###### 定理一的另一种叙述
+##### 定理一的另一种叙述
 
 设随机变量 X $_{1}, X_{2}, \cdots, X_{n}, \cdots$ 相互独立,服从同一分布,且具有数学期望和方差：E(X $\left._{k}\right)=\mu$ $D\left(X_{k}\right)=\sigma^{2}>0(k=1,2, \cdots),$ 则随机变量之和的标准化变量 $Y_{n}=\frac{\sum\limits_{k=1}^{n} X_{k}-E\left(\sum\limits_{k=1}^{n} X_{k}\right)}{\sqrt{D\left(\sum\limits_{k=1}^{n} X_{k}\right)}}$**依分布收敛[^随机变量序列依分布收敛]于 N(0,1).**
 
@@ -1175,12 +1179,16 @@ $$
 $$
 Z_{n} \stackrel{d}{\longrightarrow} N(0,1)
 $$
-定理二**表明**:无论各个随机变量 $X_{1}, X_{2}, \cdots, X_{n}, \cdots$ 服从什么分布,只要满足定理的条件, 那么它们的和 $\sum_{k=1}^{n} X_{k}$当 $n$ 很大时,近似地服从正态分布.
+##### 定理二表明
 
-#### 定理三(德莫佛一拉普拉斯定理)
+无论各个随机变量 $X_{1}, X_{2}, \cdots, X_{n}, \cdots$ 服从什么分布,只要满足定理的条件, 那么它们的和 $\sum_{k=1}^{n} X_{k}$当 $n$ 很大时,近似地服从正态分布.
+
+#### 定理三（德莫佛一拉普拉斯定理）
 
 设随机变量 $\eta_{n}(n=1,2, \cdots)$ 服从参数为 $n, p$$(0<p<1)$ 的二项分布,则 对于任意 $x,$ 恒有
 $$
 \frac{\eta_{n}-n p}{\sqrt{n p(1-p)}} \stackrel{d}{\longrightarrow} N(0,1)
 $$
-定理三**表明**:正态分布是二项分布的极限分布, 当n充分大时, 可以利用该定理来计算二项分布的概率.
+##### 定理三表明
+
+正态分布是二项分布的极限分布, 当n充分大时, 可以利用该定理来计算二项分布的概率.
