--- a/概率论与数理统计/概率论与数理统计/概率论.md
+++ b/概率论与数理统计/概率论与数理统计/概率论.md
@@ -24,7 +24,7 @@
 **分赌注问题**甲乙两人决定赌若干局，事先约定谁先赢6局便为赢家，赢家将独自赢得全部奖金。现在两人一共进行了7局比赛，甲赢了3局，乙赢了4局由于某种原因比赛无法继续，此时该如何分配奖金？
 
 **组合概率时期** 计算各种古典概率
-1951年德梅耳偶遇了法国***帕斯卡***（Pascal,1623-1662)，就此问题向帕斯卡请教，帕斯卡将此问题与它的好友业余数学家***费尔马***(Fermat,1601-1665)共同探讨，于1654年解决了此问题，并进行了一段话的推广。与此同时荷兰***惠根斯***听说这个问题后也很感兴趣于是潜心研究于1657年发表了*《论掷骰子游戏中的计算》*（概率论最早的著作）
+1951年德梅耳偶遇了法国**帕斯卡**（Pascal,1623-1662)，就此问题向帕斯卡请教，帕斯卡将此问题与它的好友业余数学家***费尔马***(Fermat,1601-1665)共同探讨，于1654年解决了此问题，并进行了一段话的推广。与此同时荷兰***惠根斯***听说这个问题后也很感兴趣于是潜心研究于1657年发表了*《论掷骰子游戏中的计算》*（概率论最早的著作）
 
 **雅各布家族** *雅各布·伯努利(Jacob Bernoulli,1654-1705)*给出了赌徒输光问题的详尽解法并证明了大数定律的一个定理，1713年（时已逝）出版《猜度术》。侄子尼古拉·伯努利（Nicolaus Bernoulli,1687-1759)提出了著名的圣彼得堡问题（1738）
 法国数学家拉普拉斯（Laplace,1749-1827)明确给出了概率的古典定义，并在概率论中引入了更有利的数学分析公式，讲概率论推向一个新的发展阶段，建立了De Mover-Lapalce定理，建立了观测误差理论和最小二乘法，1812年出版*《分析的概率理论》*
@@ -1157,11 +1157,11 @@ $$
 
 当$n\to\infty$，随机变量序列$Y_n$的分布函数收敛于标准正态分布的分布函数
 
-##### 定理一的另一种叙述
+##### 定理一另一种叙述
 
-设随机变量 X $_{1}, X_{2}, \cdots, X_{n}, \cdots$ 相互独立,服从同一分布,且具有数学期望和方差：E(X $\left._{k}\right)=\mu$ $D\left(X_{k}\right)=\sigma^{2}>0(k=1,2, \cdots),$ 则随机变量之和的标准化变量 $Y_{n}=\frac{\sum\limits_{k=1}^{n} X_{k}-E\left(\sum\limits_{k=1}^{n} X_{k}\right)}{\sqrt{D\left(\sum\limits_{k=1}^{n} X_{k}\right)}}$**依分布收敛[^随机变量序列依分布收敛]于 N(0,1).**
+设随机变量 X $_{1}, X_{2}, \cdots, X_{n}, \cdots$ 相互独立,服从同一分布,且具有数学期望和方差：E(X $\left._{k}\right)=\mu$ $D\left(X_{k}\right)=\sigma^{2}>0(k=1,2, \cdots),$ 则随机变量之和的标准化变量 $Y_{n}=\frac{\sum\limits_{k=1}^{n} X_{k}-E\left(\sum\limits_{k=1}^{n} X_{k}\right)}{\sqrt{D\left(\sum\limits_{k=1}^{n} X_{k}\right)}}$依分布收敛于 N(0,1).
 
-[^随机变量序列依分布收敛]: 设$X_n$是随机变量序列,$\left\{F_{n}(x)\right\}$ 是对应的分布函数列。如果存在一个具有分布函数$F(x)$ 的随机变量X,使得$\lim \limits_{n \rightarrow \infty} F_{n}(x)=F(x)$则称X~n~依分布收敛于X,记为 $X_{n} \stackrel{d}{\longrightarrow} X$
+**随机变量序列依分布收敛**：设$X_n$是随机变量序列,$\left\{F_{n}(x)\right\}$ 是对应的分布函数列。如果存在一个具有分布函数$F(x)$ 的随机变量X,使得$\lim \limits_{n \rightarrow \infty} F_{n}(x)=F(x)$则称X~n~依分布收敛于X,记为 $X_{n} \stackrel{d}{\longrightarrow} X$
 
 #### 定理二（李雅普诺夫定理）
 
@@ -1179,6 +1179,7 @@ $$
 $$
 Z_{n} \stackrel{d}{\longrightarrow} N(0,1)
 $$
+
 ##### 定理二表明
 
 无论各个随机变量 $X_{1}, X_{2}, \cdots, X_{n}, \cdots$ 服从什么分布,只要满足定理的条件, 那么它们的和 $\sum_{k=1}^{n} X_{k}$当 $n$ 很大时,近似地服从正态分布.
@@ -1189,6 +1190,7 @@ $$
 $$
 \frac{\eta_{n}-n p}{\sqrt{n p(1-p)}} \stackrel{d}{\longrightarrow} N(0,1)
 $$
+
 ##### 定理三表明
 
 正态分布是二项分布的极限分布, 当n充分大时, 可以利用该定理来计算二项分布的概率.
