单片机C51实验： 实验二补充

--- a/大三上/单片机与嵌入式/实验一、80C51存储器数据传输实验.md
+++ b/大三上/单片机与嵌入式/实验一、80C51存储器数据传输实验.md
@@ -113,10 +113,12 @@ LOOP:MOVX @DPTR,#1234H     
 7)	若要求程序从0010H单元开始运行，可用两种方法实现？
 
 ```assembly
-;方法一，在0000H加入跳转指令
+;方法一，使用LJMP
 ORG 0000H
 LJMP 0010H
-;方法二:定义数据区
+;方法二:使用AJMP
+ORG 0000H
+AJMP 10H
 ```
 
 
