--- a/大三上/单片机与嵌入式/实验二、80C51汇编语言编程实验.md
+++ b/大三上/单片机与嵌入式/实验二、80C51汇编语言编程实验.md
@@ -145,7 +145,32 @@ A_LOOP:
 1. 设A为累加器ACC，B为寄存器B，C为R0，D为R1，E为R2，F为R3，Y为R7。编程实现并调试。
 
 ```assembly
+    ORG 0000H
+    LJMP MAIN
+    ORG 0030H
+MAIN:
+;Y=A(B+/C)+D(E+/F)
+;R7=ACC(B+_R0)+R1(R2+_R3)
+    CPL C
+    ORL C,B.0
+    ANL C,ACC.0
+    MOV B.0,C
+    MOV ACC,#0FFH
+    ADD A,R1
+    MOV B.1,C
+    ADD A,R3
+    MOV B.3,C
+    ADD A,R2
 
+    MOV B.2,C
+    ORL C,/B.3
+    ANL C,B.1
+    ORL C,B.0
+    MOV ACC,#0H
+    MOV ACC.0,C
+    MOV R7,ACC
+JMP $
+End
 ```
 
 
@@ -153,7 +178,24 @@ A_LOOP:
 2. 设A为P1.0，B为P1.4，C为TF1，D、E、F分别为20H.0、20H.3和20H.5，Y为P1.5。编程实现并调试。
 
  ```assembly
+ORG 0000H
+LJMP MAIN
 
+ORG 0030H
+MAIN:
+;Y=A(B+/C)+D(E+/F)
+;P1.5=P1.0(P1.4+/TF1)+20H.0(20H.3+/20H.5)
+MOV C,P1.4
+ORL C,/TF1
+ANL C,P1.0
+MOV P1.0,C
+MOV C,20H.3
+ORL C,/20H.5
+ANL	C,20H.0
+ORL C,P1.0
+MOV P1.5,C
+JMP $
+End
  ```
 
 
@@ -173,15 +215,48 @@ POP  PSW
 
 | 寄存器 | 程序执行前 | 程序执行后 |
 | ------ | ---------- | ---------- |
-| SP     | 21H        |            |
-| A      | 1FH        |            |
-| 1FH    | 22H        |            |
-| 20H    | 1FH        |            |
-| 21H    | 20H        |            |
-| 22H    | 24H        |            |
-| 23H    | 24H        |            |
-| 24H    | 22H        |            |
-| 30H    | 24H        |            |
-| PSW    | 01H        |            |
+| SP     | 21H        | 20H        |
+| A      | 1FH        | 21H        |
+| 1FH    | 22H        | 21H        |
+| 20H    | 1FH        | 1FH        |
+| 21H    | 20H        | 24H        |
+| 22H    | 24H        | 34H        |
+| 23H    | 24H        | 24H        |
+| 24H    | 22H        | 22H        |
+| 30H    | 24H        | 20H        |
+| PSW    | 01H        | 24H        |
 
  
+
+```assembly
+ORG 0000H
+LJMP predoing
+
+ORG 0030H
+predoing:
+MOV SP,#21H
+MOV A,#1FH
+MOV 1FH,#22H
+MOV 20H,#1FH
+MOV 21H,#20H
+MOV 22H,#24H
+MOV 23H,#24H
+MOV 24H,#22H
+MOV 30H,#24H
+MOV PSW,#01H
+MAIN:
+MOV  R0,20H
+MOV  A,#21H
+MOV  @R0,A
+POP   30H
+PUSH  22H
+CPL   C
+MOV  20,C
+POP   PSW
+
+
+JMP $
+end
+
+```
+
