闫老板指导下修改代码

--- a/大三上/单片机与嵌入式/实验二、80C51汇编语言编程实验.md
+++ b/大三上/单片机与嵌入式/实验二、80C51汇编语言编程实验.md
@@ -150,25 +150,49 @@ A_LOOP:
     ORG 0030H
 MAIN:
 ;Y=A(B+/C)+D(E+/F)
-;R7=ACC(B+_R0)+R1(R2+_R3)
-    CPL C
-    ORL C,B.0
-    ANL C,ACC.0
-    MOV B.0,C
-    MOV ACC,#0FFH
-    ADD A,R1
-    MOV B.1,C
-    ADD A,R3
-    MOV B.3,C
-    ADD A,R2
+;R7=ACC(B  +_R0 )+R1 (R2+ _R3)
+;   B.0(B.1+_B.2)+B.3(B.4+_B.5)
+	MOV R4,ACC
+	MOV ACC,#0FFH
+	ADD A,R4
+	MOV B.0,C
+	
+	MOV ACC,#0FFH
+	ADD A,B
+	MOV B.1,C
+	
+	MOV ACC,#0FFH
+	ADD A,R0
+	MOV B.2,C
+	
+	MOV ACC,#0FFH
+	ADD A,R1
+	MOV B.3,C
+	
+	MOV ACC,#0FFH
+	ADD A,R2
+	MOV B.4,C
+	
+	MOV ACC,#0FFH
+	ADD A,R3
+	MOV B.5,C
+;-----------------
+	MOV C,B.2
+	CPL C
+	ORL C,B.1
+	ANL C,B.0
 
-    MOV B.2,C
-    ORL C,/B.3
-    ANL C,B.1
-    ORL C,B.0
+    MOV B.6,C
+	MOV C,B.4
+    ORL C,/B.5
+    ANL C,B.3
+
+    ORL C,B.6
     MOV ACC,#0H
     MOV ACC.0,C
     MOV R7,ACC
+BOOL: MOV A,#0FFH
+      ADD A,R4
 JMP $
 End
 ```
